--- a/app/src/main/res/layout/fragment_total.xml
+++ b/app/src/main/res/layout/fragment_total.xml
@@ -18,7 +18,8 @@
             android:gravity="center_horizontal"
             android:orientation="horizontal"
             android:paddingLeft="20dp"
-            android:paddingRight="20dp">
+            android:paddingRight="20dp"
+            android:layout_marginBottom="20dp">
 
             <Button
                 android:id="@+id/butt_day"
@@ -26,7 +27,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="5dp"
                 android:backgroundTint="@color/blue_dark"
-                android:fontFamily="@font/hachi_maru_pop"
+                android:fontFamily="@font/play"
                 android:text="день"
                 android:textSize="13sp"
                 app:cornerRadius="10dp" />
@@ -37,7 +38,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="5dp"
                 android:backgroundTint="@color/blue_light"
-                android:fontFamily="@font/hachi_maru_pop"
+                android:fontFamily="@font/play"
                 android:text="неделя"
                 android:textColor="@color/blue_dark"
                 android:textSize="13sp"
@@ -48,8 +49,20 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:backgroundTint="@color/blue_light"
-                android:fontFamily="@font/hachi_maru_pop"
+                android:fontFamily="@font/play"
                 android:text="месяц"
+                android:textColor="@color/blue_dark"
+                android:textSize="13sp"
+                app:cornerRadius="10dp"
+                android:layout_marginEnd="5dp"/>
+
+            <Button
+                android:id="@+id/butt_year"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:backgroundTint="@color/blue_light"
+                android:fontFamily="@font/play"
+                android:text="год"
                 android:textColor="@color/blue_dark"
                 android:textSize="13sp"
                 app:cornerRadius="10dp" />
@@ -61,26 +74,211 @@
             android:gravity="center_horizontal"
             android:orientation="horizontal">
 
-            <ProgressBar
-                android:id="@+id/water_progress"
-                style="@style/Widget.ProgressBarWater.Vertical"
-                android:layout_width="90dp"
-                android:layout_height="300dp"
-                android:progress="26" />
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="20dp">
 
-            <ProgressBar
-                android:id="@+id/coffee_progress"
-                style="@style/Widget.ProgressBarCoffee.Vertical"
-                android:layout_width="90dp"
-                android:layout_height="300dp"
-                android:progress="26" />
+                <ProgressBar
+                    android:id="@+id/water_progress"
+                    style="@style/Widget.ProgressBarWater.Vertical"
+                    android:layout_width="90dp"
+                    android:layout_height="300dp"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
 
-            <ProgressBar
-                android:id="@+id/tea_progress"
-                style="@style/Widget.ProgressBarTea.Vertical"
-                android:layout_width="90dp"
-                android:layout_height="300dp"
-                android:progress="26" />
+                <ImageView
+                    android:id="@+id/water_circle"
+                    android:layout_width="60dp"
+                    android:layout_height="60dp"
+                    android:layout_marginTop="40dp"
+                    android:src="@drawable/water_circle"
+                    app:layout_constraintEnd_toEndOf="@+id/water_progress"
+                    app:layout_constraintStart_toStartOf="@+id/water_progress"
+                    app:layout_constraintTop_toTopOf="@+id/water_progress" />
+
+                <TextView
+                    android:id="@+id/water_text"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/hachi_maru_pop"
+                    android:text="вода"
+                    android:textColor="@color/black"
+                    android:textSize="11sp"
+                    app:layout_constraintBottom_toBottomOf="@+id/water_progress"
+                    app:layout_constraintEnd_toEndOf="@+id/water_progress"
+                    app:layout_constraintStart_toStartOf="@+id/water_progress"
+                    app:layout_constraintTop_toBottomOf="@+id/water_circle"
+                    app:layout_constraintVertical_bias="0.039" />
+
+                <TextView
+                    android:id="@+id/num_water"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/hachi_maru_pop"
+                    android:text="0"
+                    android:textColor="@color/black"
+                    android:textSize="20sp"
+                    app:layout_constraintBottom_toBottomOf="@+id/water_progress"
+                    app:layout_constraintEnd_toEndOf="@+id/water_progress"
+                    app:layout_constraintStart_toStartOf="@+id/water_progress"
+                    app:layout_constraintTop_toBottomOf="@+id/water_text"
+                    app:layout_constraintVertical_bias="0.673" />
+
+                <TextView
+                    android:id="@+id/lw_text"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/hachi_maru_pop"
+                    android:text="литров"
+                    android:textColor="@color/black"
+                    android:textSize="11sp"
+                    app:layout_constraintBottom_toBottomOf="@+id/water_progress"
+                    app:layout_constraintEnd_toEndOf="@+id/water_progress"
+                    app:layout_constraintStart_toStartOf="@+id/water_progress"
+                    app:layout_constraintTop_toBottomOf="@+id/num_water"
+                    app:layout_constraintVertical_bias="0.039" />
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="20dp">
+
+                <ProgressBar
+                    android:id="@+id/coffee_progress"
+                    style="@style/Widget.ProgressBarCoffee.Vertical"
+                    android:layout_width="90dp"
+                    android:layout_height="300dp"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"/>
+
+                <ImageView
+                    android:id="@+id/coffee_circle"
+                    android:layout_width="60dp"
+                    android:layout_height="60dp"
+                    android:layout_marginTop="40dp"
+                    app:layout_constraintEnd_toEndOf="@+id/coffee_progress"
+                    app:layout_constraintStart_toStartOf="@+id/coffee_progress"
+                    app:layout_constraintTop_toTopOf="@+id/coffee_progress"
+                    android:src="@drawable/coffee_circle" />
+
+                <TextView
+                    android:id="@+id/coffee_text"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/hachi_maru_pop"
+                    android:text="кофе"
+                    android:textColor="@color/black"
+                    android:textSize="11sp"
+                    app:layout_constraintBottom_toBottomOf="@+id/coffee_progress"
+                    app:layout_constraintEnd_toEndOf="@+id/coffee_progress"
+                    app:layout_constraintStart_toStartOf="@+id/coffee_progress"
+                    app:layout_constraintTop_toBottomOf="@+id/coffee_circle"
+                    app:layout_constraintVertical_bias="0.039" />
+
+                <TextView
+                    android:id="@+id/num_coffee"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/hachi_maru_pop"
+                    android:text="0"
+                    android:textColor="@color/black"
+                    android:textSize="20sp"
+                    app:layout_constraintBottom_toBottomOf="@+id/coffee_progress"
+                    app:layout_constraintEnd_toEndOf="@+id/coffee_progress"
+                    app:layout_constraintStart_toStartOf="@+id/coffee_progress"
+                    app:layout_constraintTop_toBottomOf="@+id/coffee_text"
+                    app:layout_constraintVertical_bias="0.673" />
+
+                <TextView
+                    android:id="@+id/lc_text"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/hachi_maru_pop"
+                    android:text="литров"
+                    android:textColor="@color/black"
+                    android:textSize="11sp"
+                    app:layout_constraintBottom_toBottomOf="@+id/coffee_progress"
+                    app:layout_constraintEnd_toEndOf="@+id/coffee_progress"
+                    app:layout_constraintStart_toStartOf="@+id/coffee_progress"
+                    app:layout_constraintTop_toBottomOf="@+id/num_coffee"
+                    app:layout_constraintVertical_bias="0.039" />
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content">
+
+                <ProgressBar
+                    android:id="@+id/tea_progress"
+                    style="@style/Widget.ProgressBarTea.Vertical"
+                    android:layout_width="90dp"
+                    android:layout_height="300dp"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"/>
+
+                <ImageView
+                    android:id="@+id/tea_circle"
+                    android:layout_width="60dp"
+                    android:layout_height="60dp"
+                    android:layout_marginTop="40dp"
+                    app:layout_constraintEnd_toEndOf="@+id/tea_progress"
+                    app:layout_constraintStart_toStartOf="@+id/tea_progress"
+                    app:layout_constraintTop_toTopOf="@+id/tea_progress"
+                    android:src="@drawable/tea_circle" />
+
+                <TextView
+                    android:id="@+id/tea_text"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/hachi_maru_pop"
+                    android:text="чай"
+                    android:textColor="@color/black"
+                    android:textSize="11sp"
+                    app:layout_constraintBottom_toBottomOf="@+id/tea_progress"
+                    app:layout_constraintEnd_toEndOf="@+id/tea_progress"
+                    app:layout_constraintStart_toStartOf="@+id/tea_progress"
+                    app:layout_constraintTop_toBottomOf="@+id/tea_circle"
+                    app:layout_constraintVertical_bias="0.039" />
+
+                <TextView
+                    android:id="@+id/num_tea"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/hachi_maru_pop"
+                    android:text="0"
+                    android:textColor="@color/black"
+                    android:textSize="20sp"
+                    app:layout_constraintBottom_toBottomOf="@+id/tea_progress"
+                    app:layout_constraintEnd_toEndOf="@+id/tea_progress"
+                    app:layout_constraintStart_toStartOf="@+id/tea_progress"
+                    app:layout_constraintTop_toBottomOf="@+id/tea_text"
+                    app:layout_constraintVertical_bias="0.673" />
+
+                <TextView
+                    android:id="@+id/lt_text"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/hachi_maru_pop"
+                    android:text="литров"
+                    android:textColor="@color/black"
+                    android:textSize="11sp"
+                    app:layout_constraintBottom_toBottomOf="@+id/tea_progress"
+                    app:layout_constraintEnd_toEndOf="@+id/tea_progress"
+                    app:layout_constraintStart_toStartOf="@+id/tea_progress"
+                    app:layout_constraintTop_toBottomOf="@+id/num_tea"
+                    app:layout_constraintVertical_bias="0.039" />
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
 
 
         </LinearLayout>
